[package]
name = "pda-local"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "1.3.1"
solana-program = "1.10.29"
thiserror = "1.0.31"
spl-token = { version="4.0.1", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="=2.3.1", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]
